<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/student_name"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/etStudentSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/student_surname"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grades" />
        <Spinner
            android:id="@+id/spinnerStudentGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:entries="@array/grades"
            android:prompt="@string/grades"
            android:textAlignment="center" />
        <RadioButton
            android:id="@+id/rbStudentDrunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/is_drunk" />
        <EditText
            android:id="@+id/etStudentAccountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="number"
            android:text="@string/acount_value"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/address" />
        <EditText
            android:id="@+id/edStudentStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/street"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <EditText
            android:id="@+id/edStudentCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/city"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/edStudentNumberAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/number"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/btStudentSaveStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_student"
            android:layout_gravity="center"
            android:padding="16dp"/>
    </LinearLayout>
</ScrollView>