<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/text_1"
        android:layout_weight="2"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/text_2"
        android:layout_weight="1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/text_3"
        android:layout_weight="1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_4"
        android:layout_weight="1"

        />


</LinearLayout>