<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"

        />

    <View
        android:id="@+id/viev1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/edittext3"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/imageButtonKnife"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/viev1"
        android:layout_centerHorizontal="true"
        style="@style/button"

        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edittext3"
        android:layout_alignTop="@+id/imageButton"
        android:gravity="center_horizontal"
        android:padding="15dp"

        android:text="@string/text_1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageview1"
        android:layout_alignEnd="@+id/viev1"

        android:layout_marginBottom="21dp"
        android:text="@string/text_2"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edittext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/text_3" />


</RelativeLayout>